cmake_minimum_required(VERSION 3.9)
project(Lem_in)

set(CMAKE_CXX_STANDARD 11)

add_executable(Lem_in
        inc/Lemin.h
        libftprintf/inc/ft_printf.h
        libftprintf/inc/libft.h
        libftprintf/libft/ft_atoi.c
        libftprintf/libft/ft_bzero.c
        libftprintf/libft/ft_countnumb.c
        libftprintf/libft/ft_isalnum.c
        libftprintf/libft/ft_isalpha.c
        libftprintf/libft/ft_isascii.c
        libftprintf/libft/ft_isdigit.c
        libftprintf/libft/ft_isprint.c
        libftprintf/libft/ft_itoa.c
        libftprintf/libft/ft_lstadd.c
        libftprintf/libft/ft_lstdel.c
        libftprintf/libft/ft_lstdelone.c
        libftprintf/libft/ft_lstiter.c
        libftprintf/libft/ft_lstmap.c
        libftprintf/libft/ft_lstnew.c
        libftprintf/libft/ft_memalloc.c
        libftprintf/libft/ft_memccpy.c
        libftprintf/libft/ft_memchr.c
        libftprintf/libft/ft_memcmp.c
        libftprintf/libft/ft_memcpy.c
        libftprintf/libft/ft_memdel.c
        libftprintf/libft/ft_memmove.c
        libftprintf/libft/ft_memset.c
        libftprintf/libft/ft_pf_write.c
        libftprintf/libft/ft_pow.c
        libftprintf/libft/ft_putchar.c
        libftprintf/libft/ft_putchar_fd.c
        libftprintf/libft/ft_putendl.c
        libftprintf/libft/ft_putendl_fd.c
        libftprintf/libft/ft_putnbr.c
        libftprintf/libft/ft_putnbr_fd.c
        libftprintf/libft/ft_putstr.c
        libftprintf/libft/ft_putstr_fd.c
        libftprintf/libft/ft_revprint.c
        libftprintf/libft/ft_sizelist.c
        libftprintf/libft/ft_sndr.c
        libftprintf/libft/ft_strcat.c
        libftprintf/libft/ft_strchr.c
        libftprintf/libft/ft_strclr.c
        libftprintf/libft/ft_strcmp.c
        libftprintf/libft/ft_strcpy.c
        libftprintf/libft/ft_strdel.c
        libftprintf/libft/ft_strdup.c
        libftprintf/libft/ft_strequ.c
        libftprintf/libft/ft_striter.c
        libftprintf/libft/ft_striteri.c
        libftprintf/libft/ft_strjoin.c
        libftprintf/libft/ft_strlcat.c
        libftprintf/libft/ft_strlen.c
        libftprintf/libft/ft_strmap.c
        libftprintf/libft/ft_strmapi.c
        libftprintf/libft/ft_strncat.c
        libftprintf/libft/ft_strnchr.c
        libftprintf/libft/ft_strncmp.c
        libftprintf/libft/ft_strncpy.c
        libftprintf/libft/ft_strnequ.c
        libftprintf/libft/ft_strnew.c
        libftprintf/libft/ft_strnstr.c
        libftprintf/libft/ft_strrchr.c
        libftprintf/libft/ft_strsplit.c
        libftprintf/libft/ft_strstr.c
        libftprintf/libft/ft_strsub.c
        libftprintf/libft/ft_strtrim.c
        libftprintf/libft/ft_tolower.c
        libftprintf/libft/ft_toupper.c
        libftprintf/libft/get_next_line.c
        libftprintf/libft/libft.h
        libftprintf/src/chars.c
        libftprintf/src/conversions.c
        libftprintf/src/ft_itoa_base.c
        libftprintf/src/ft_len_u.c
        libftprintf/src/ft_printf.c
        libftprintf/src/hash.c
        libftprintf/src/lenght.c
        libftprintf/src/numbers.c
        libftprintf/src/numbers2.c
        libftprintf/src/pointers.c
        libftprintf/src/precision_zeros.c
        libftprintf/src/reading.c
        libftprintf/src/strings.c
        libftprintf/src/strings2.c
        libftprintf/src/unsignedconv.c
        libftprintf/src/utf_str.c
        src/main.c
        src/add_links.c
        src/add_rooms.c
        src/create_node.c
        src/parse.c
        src/tools.c
        src/valid.c
        src/error_manager.c
        )
